--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 * Consul webui reports: There are no services to show.
 
+curl 'http://localhost:8500/v1/kv/foo?dc=seattle'
+
 As of commit e4e25f9:
 
 http://localhost:8500/ui/#/seattle/services
@@ -26,11 +28,18 @@ C:\Users\Administrator>
 but:
 #+BEGIN_SRC
 [Administrator@taylordesktop:~(master)]$ curl 'http://localhost:8500/v1/kv/foo?dc=seattle'
-No cluster leader[Administrator@taylordesktop:~(master)]$
+No cluster leader
+[Administrator@taylordesktop:~(master)]$
 #+END_SRC
 
 Possible leads:
 + https://github.com/hashicorp/consul/issues/908
+
+** solution: re-bootstrap
+
+#+BEGIN_SRC
+consul agent -server -bootstrap-expect 3 -ui-dir C:\ProgramData\consul\www -data-dir C:\ProgramData\consul\data -dc seattle -retry-join 10.0.3.207 -retry-join 10.0.3.94 -retry-join 10.0.2.78
+#+END_SRC
 
 * vault: protect against outages by running multiple Vault servers
 
