--- a/README.org
+++ b/README.org
@@ -1,6 +1,43 @@
+* rejoin_after_leave
+
+https://www.consul.io/docs/agent/options.html#rejoin_after_leave
+
+After reboot, often consul ends up in a state where it can't elect a
+leader given this config:
+#+BEGIN_SRC
+{
+  "retry_join": ["10.0.2.78", "10.0.3.94", "10.0.3.207"],
+  "datacenter": "seattle",
+  "ui_dir": "C:/ProgramData/consul/www",
+  "data_dir": "C:/ProgramData/consul/data",
+  "log_level": "INFO",
+  "server": true
+}
+#+END_SRC
+
+I thought =retry_join= would be enough.
+
+Even after
+
+Consul webui reports: There are no services to show.
+
+curl "http://localhost:8500/v1/kv/foo?dc=seattle"
+
+#+BEGIN_SRC
+Agent pid 2316
+[Administrator@IFB:~(master)]$ curl "http://localhost:8500/v1/kv/foo?dc=seattle"
+No cluster leader[Administrator@IFB:~(master)]$ consul members
+Node           Address          Status  Type    Build  Protocol  DC
+IFB            10.0.2.78:8301   alive   server  0.5.2  2         seattle
+TAYLORDESKTOP  10.0.3.60:8301   alive   server  0.5.2  2         seattle
+SBXE0ABB74     10.0.3.207:8301  alive   server  0.5.2  2         seattle
+[Administrator@IFB:~(master)]$
+#+END_SRC
+
+
 * Consul webui reports: There are no services to show.
 
-curl 'http://localhost:8500/v1/kv/foo?dc=seattle'
+curl "http://localhost:8500/v1/kv/foo?dc=seattle"
 
 As of commit e4e25f9:
 
@@ -37,10 +74,10 @@ Possible leads:
 
 ** solution: re-bootstrap
 
-From just one of the 3 machines: 10.0.2.78, 10.0.3.207 or 10.0.3.94,
+From either one of the 3 machines: 10.0.2.78, 10.0.3.207 or 10.0.3.94
 re-bootstrap:
 #+BEGIN_SRC
-consul agent -server -bootstrap-expect 3 -ui-dir C:\ProgramData\consul\www -data-dir C:\ProgramData\consul\data -dc seattle -retry-join 10.0.3.207 -retry-join 10.0.3.94 -retry-join 10.0.2.78
+net stop consul & consul agent -server -bootstrap-expect 3 -ui-dir C:\ProgramData\consul\www -data-dir C:\ProgramData\consul\data -dc seattle -retry-join 10.0.3.207 -retry-join 10.0.3.94 -retry-join 10.0.2.78
 #+END_SRC
 
 https://www.consul.io/docs/guides/bootstrapping.html
