--- a/README.org
+++ b/README.org
@@ -48,6 +48,14 @@ SBXE0ABB74     10.0.3.207:8301  alive   server  0.5.2  2         seattle
 [Administrator@IFB:~(master)]$
 #+END_SRC
 
+
+
+
+https://www.consul.io/docs/guides/bootstrapping.html
+#+BEGIN_SRC
+consul join 10.0.2.78 10.0.3.207 10.0.3.94
+#+END_SRC
+
 * Consul webui reports: There are no services to show.
 
 curl "http://localhost:8500/v1/kv/foo?dc=seattle"
