--- a/README.org
+++ b/README.org
@@ -21,6 +21,7 @@ leader given this config:
 #+BEGIN_SRC
 {
   "retry_join": ["10.0.2.78", "10.0.3.94", "10.0.3.207"],
+  "rejoin_after_leave": true,
   "datacenter": "seattle",
   "ui_dir": "C:/ProgramData/consul/www",
   "data_dir": "C:/ProgramData/consul/data",
@@ -46,14 +47,6 @@ IFB            10.0.2.78:8301   alive   server  0.5.2  2         seattle
 TAYLORDESKTOP  10.0.3.60:8301   alive   server  0.5.2  2         seattle
 SBXE0ABB74     10.0.3.207:8301  alive   server  0.5.2  2         seattle
 [Administrator@IFB:~(master)]$
-#+END_SRC
-
-
-
-
-https://www.consul.io/docs/guides/bootstrapping.html
-#+BEGIN_SRC
-consul join 10.0.2.78 10.0.3.207 10.0.3.94
 #+END_SRC
 
 * Consul webui reports: There are no services to show.
