--- a/README.org
+++ b/README.org
@@ -1,3 +1,27 @@
+* =consul/logs= directory is always empty even though =log_level=info=
+
+Logs dir:
+#+BEGIN_SRC
+C:/ProgramData/consul/logs",
+#+END_SRC
+
+is present, but there are never logs with this config on windows:
+#+BEGIN_SRC
+{
+  "start_join": ["10.0.2.78", "10.0.3.60", "10.0.3.207"],
+  "retry_join": ["10.0.2.78", "10.0.3.60", "10.0.3.207"],
+  "rejoin_after_leave": true,
+  "leave_on_terminate": true,
+  "datacenter": "seattle",
+  "ui_dir": "C:/ProgramData/consul/www",
+  "data_dir": "C:/ProgramData/consul/data",
+  "log_level": "info",
+  "server": true
+}
+#+END_SRC
+
+unless I run in console mode.  Is this expected?
+
 * =start_join= versus =retry_join= versus =join=
 
 + https://www.consul.io/docs/agent/options.html#start_join
