--- a/README.org
+++ b/README.org
@@ -1,3 +1,18 @@
+* Frequely used commands for testing
+
+#+BEGIN_SRC
+powershell -noprofile -executionpolicy unrestricted -command "(new-object System.Net.WebClient).DownloadFile('https://raw.githubusercontent.com/TaylorMonacelli/consul-install-windows/wip/nssminstall.ps1','nssminstall.ps1')"
+powershell -noprofile -executionpolicy unrestricted -file nssminstall.ps1
+
+powershell -noprofile -executionpolicy unrestricted -command "(new-object System.Net.WebClient).DownloadFile('https://raw.githubusercontent.com/TaylorMonacelli/consul-install-windows/wip/consulinstall.ps1','consulinstall.ps1')"
+powershell -noprofile -executionpolicy unrestricted -file consulinstall.ps1
+
+net stop consul & consul agent -server -bootstrap-expect 3 -ui-dir C:\ProgramData\consul\www -data-dir C:\ProgramData\consul\data -dc seattle -retry-join 10.0.3.207 -retry-join 10.0.3.60 -retry-join 10.0.2.78
+
+REM check whether cluster has a leader
+curl 'http://localhost:8500/v1/kv/foo?dc=seattle'
+#+END_SRC
+
 * =consul/logs= directory is always empty even though =log_level=info=
 
 Logs dir:
@@ -27,20 +42,6 @@ unless I run in console mode.  Is this expected?
 + https://www.consul.io/docs/agent/options.html#start_join
 + https://www.consul.io/docs/agent/options.html#_retry_join
 + https://www.consul.io/docs/agent/options.html#_join
-
-* Frequely used commands
-
-#+BEGIN_SRC
-powershell -noprofile -executionpolicy unrestricted -command "(new-object System.Net.WebClient).DownloadFile('https://raw.githubusercontent.com/TaylorMonacelli/consul-install-windows/wip/nssminstall.ps1','nssminstall.ps1')"
-powershell -noprofile -executionpolicy unrestricted -file nssminstall.ps1
-
-powershell -noprofile -executionpolicy unrestricted -command "(new-object System.Net.WebClient).DownloadFile('https://raw.githubusercontent.com/TaylorMonacelli/consul-install-windows/wip/consulinstall.ps1','consulinstall.ps1')"
-powershell -noprofile -executionpolicy unrestricted -file consulinstall.ps1
-
-net stop consul & consul agent -server -bootstrap-expect 3 -ui-dir C:\ProgramData\consul\www -data-dir C:\ProgramData\consul\data -dc seattle -retry-join 10.0.3.207 -retry-join 10.0.3.60 -retry-join 10.0.2.78
-
-curl 'http://localhost:8500/v1/kv/foo?dc=seattle'
-#+END_SRC
 
 * flag =rejoin_after_leave=
 
