--- a/README.org
+++ b/README.org
@@ -177,9 +177,11 @@ advertises to other Vault servers in the cluster for request
 forwarding. By default, Vault will use the first private IP address it
 finds, but you can override this to any address you want.
 
-** vault: =advertise_addr=
-
-https://vaultproject.io/docs/config/#advertise_addr
+** vault advertise address =advertise_addr=
++ https://github.com/hashicorp/vault/issues/444
++ https://www.consul.io/docs/agent/options.html#advertise_addr
++ https://goo.gl/bK9yzy
++ https://vaultproject.io/docs/config/#advertise_addr
 
 All backends support the following options:
 
@@ -187,12 +189,6 @@ All backends support the following options:
 address to advertise to other Vault servers in the cluster for request
 forwarding. Most HA backends will attempt to determine the advertise
 address if not provided.
-
-** vault advertise address
-+ https://www.consul.io/docs/agent/options.html#advertise_addr
-
-https://github.com/hashicorp/vault/issues/444
-https://goo.gl/bK9yzy
 
 * TODO how to get two consul servers to find each other
 Tutorial
